# waynergy

./: LICENSE  Makefile  README.md  clip-update.c  clip.c  clip.h  clipmon.c  config.c  config.h  fdio_full.h  log.c  log.h  main.c  meson.build  net.c  net.h  os.c  os.h  sig.c  sig.h  sopt.h  ssp.c  ssp.h  synergy.c  synergy.h  t.c  uSynergy.c  uSynergy.h  wayland.c  wayland.h  waynergy.desktop  wl_idle.c  wl_key.c  wl_mouse.c  xmem.h
config-example/idle-inhibit/: cmd-off  cmd-on
config-example/intrinsic_mask/: alt  control  shift  super
config-example/log/: path
config-example/screensaver/: start  stop
doc/config-example/: config.ini  xkb_keymap
doc/config-example/idle-inhibit/: keyname
doc/config-example/log/: path
doc/config-example/screensaver/: start  stop
doc/xkb/keycodes/: mac  win
include/: clip.h  config.h  fdio_full.h  log.h  meson.build  net.h  os.h  sig.h  sopt.h  ssb.h  ssp.h  uSynergy.h  ver.h.in  wayland.h  xmem.h
protocol/: fake-input.xml  meson.build
src/: clip-update.c  clip.c  config.c  log.c  main.c  mapper.c  net.c  os.c  sig.c  uSynergy.c  wayland.c  wl_idle.c  wl_idle_ext.c  wl_idle_gnome.c  wl_idle_kde.c  wl_input.c  wl_input_kde.c  wl_input_uinput.c  wl_input_wlr.c  wl_key.c  wl_mouse.c
test/: _log.c  config.c  os.c  run.sh
test/config/: config.ini
